fixed spacing for small screens

--- a/main.css
+++ b/main.css
@@ -182,11 +182,15 @@ header .nav-spacer {
     max-width: 600px;
   }
 }
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 475px) {
   .navbar a,
-  .dropdown {
+  .dropdown{
     margin-right: 0;
+    padding: 14px 5px;
   }
+  .dropdown .dropbtn {
+    margin-right: 0;
+    padding: 0;
 }
 @media only screen and (max-width: 360px) {
   #title,
